--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_below="@+id/progressBar" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go"
@@ -26,60 +27,47 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
-    <EditText
+    <!--<EditText-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/editText"-->
+        <!--android:layout_alignBottom="@+id/go_btn"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_toStartOf="@+id/clear_btn" />-->
+    <com.example.jitianbo.baidusucks.MyEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
         android:layout_alignBottom="@+id/go_btn"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/clear_btn" />
+        android:layout_toStartOf="@+id/go_btn" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="  Back  "
+        android:text="&lt;&lt;"
 
         android:id="@+id/back_btn"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/refresh_btn" />
+        android:layout_alignParentStart="true" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forward"
+        android:text=">>"
         android:id="@+id/forward_btn"
-        android:layout_alignTop="@+id/back_btn"
-        android:layout_toEndOf="@+id/back_btn" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Refresh"
-        android:id="@+id/refresh_btn"
-        android:layout_alignTop="@+id/stop_btn"
-        android:layout_toStartOf="@+id/stop_btn" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop"
-        android:id="@+id/stop_btn"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/webView"
-        android:layout_toEndOf="@+id/clear_btn" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="X"
-        android:id="@+id/clear_btn"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/go_btn" />
+        android:layout_toEndOf="@+id/back_btn" />
+    <!--<Button-->
+        <!--style="?android:attr/buttonStyleSmall"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="X"-->
+        <!--android:id="@+id/clear_btn"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_toStartOf="@+id/go_btn" />-->
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
