--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,76 +9,124 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.jitianbo.baidusucks.MainActivity">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top"
+        android:fitsSystemWindows="true" >
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go"
+            android:id="@+id/go_btn"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
+
+        <com.example.jitianbo.baidusucks.MyEditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_alignBottom="@+id/go_btn"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/go_btn" />
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/go_btn"
+            android:layout_alignParentEnd="true"
+
+            />
+    </RelativeLayout>
+
     <WebView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="361dp"
         android:id="@+id/webView"
-        android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/go_btn"
-        android:layout_above="@+id/back_btn"
-        android:layout_below="@+id/progressBar" />
+        android:layout_gravity="center" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go"
-        android:id="@+id/go_btn"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+    <RelativeLayout
+        android:id="@+id/relative1"
+        android:layout_width="match_parent"
+        android:layout_height="147dp"
+        android:layout_gravity="center_horizontal|bottom">
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="&lt;&lt;"
 
-    <!--<EditText-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/editText"-->
-        <!--android:layout_alignBottom="@+id/go_btn"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_toStartOf="@+id/clear_btn" />-->
-    <com.example.jitianbo.baidusucks.MyEditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_alignBottom="@+id/go_btn"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/go_btn" />
+            android:id="@+id/back_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="&lt;&lt;"
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=">>"
+            android:id="@+id/forward_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/back_btn" />
 
-        android:id="@+id/back_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:id="@+id/xiangxi_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=">>"
-        android:id="@+id/forward_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/back_btn" />
-    <!--<Button-->
-        <!--style="?android:attr/buttonStyleSmall"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="X"-->
-        <!--android:id="@+id/clear_btn"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_toStartOf="@+id/go_btn" />-->
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="书签"
+            android:id="@+id/shuqian_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/zhuye_btn" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/go_btn"
-        android:layout_alignParentEnd="true"
-        android:maxHeight="20dp"
-        android:minHeight="10dp"
-        />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="主页"
+            android:id="@+id/zhuye_btn"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
 
-</RelativeLayout>
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置"
+            android:id="@+id/shezhi_btn"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/shuqian_btn" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="刷新"
+            android:id="@+id/shuaxin_btn"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/back_btn" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="添加书签"
+            android:id="@+id/tianjiashuqian_btn"
+            android:layout_centerHorizontal="true"
+            android:layout_alignBottom="@+id/shezhi_btn" />
+
+    </RelativeLayout>
+</FrameLayout>
